# llm_ocr

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  some-compose.yml
.github/workflows/: python-app.yml
app/: app.py  llm_utils.py  ocr_utils.py
sample_input/: base64.txt
tests/: test_llm_utils.py  test_ocr_utils.py
